--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             
             <div class="hero-image-container fade-in-up">
                 <div class="image-glow"></div>
-                <img src="assets/images/profile.png" alt="Gaurav Thakur" class="profile-image" loading="lazy">
+                <img src="images/profile.png" alt="Gaurav Thakur" class="profile-image" loading="lazy">
             </div>
         </div>
     </section>
