--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#hero" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#certificates" class="nav-link">Certificates</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -164,6 +165,37 @@
                         <span class="tag">Concepts</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2 class="section-title fade-in-up">Projects</h2>
+
+            <div class="projects-grid">
+                <article class="project-card glass-effect fade-in-up">
+                    <div class="project-card__header">
+                        <h3 class="project-title">Library Management System</h3>
+                        <div class="project-actions">
+                            <a class="icon-btn" href="https://github.com/GauravThakurGit/Projects/tree/main/library_management_system" target="_blank" rel="noopener noreferrer">
+                                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5C5.73.5.5 5.73.5 12a11.5 11.5 0 0 0 7.86 10.94c.58.1.79-.25.79-.56v-2.02c-3.2.7-3.87-1.54-3.87-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.18.08 1.8 1.22 1.8 1.22 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.74-1.56-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.3 1.2-3.12-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.18 1.19.92-.26 1.9-.39 2.88-.39.98 0 1.96.13 2.88.39 2.2-1.5 3.17-1.19 3.17-1.19.63 1.58.23 2.75.11 3.04.75.82 1.2 1.86 1.2 3.12 0 4.43-2.69 5.4-5.25 5.69.42.36.79 1.07.79 2.17v3.22c0 .31.21.67.8.56A11.5 11.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5z"/></svg>
+                            </a>
+                            <a class="icon-btn" href="https://youtu.be/nh9x71AazNg" target="_blank" rel="noopener noreferrer">
+                                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M10 15.5V8.5L16 12l-6 3.5ZM21 7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V7Z"/></svg>
+                            </a>
+                        </div>
+                    </div>
+                    <p class="project-description">A full stack Library Management System with Admin and Student dashboards, secure authentication, book issue & return functionality, and SQL database integration. Built using real-world full stack architecture.</p>
+                    <div class="project-tags">
+                        <span class="tag">Python (Flask)</span>
+                        <span class="tag">SQL</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">JavaScript</span>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
